# autoppia_studio

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  STRUCTURE.md  ecosystem.ica_ui.config.js  ecosystem.local.config.js  ecosystem.studio.config.js  nginx.conf  pytest.ini
backend/: .env.example  .gitignore  README.md  main.py  pyproject.toml  requirements.txt
backend/agent/: apified_cua.py  autoppia_agent.py  autoppia_operator.py  browser_executor.py
backend/app/: __init__.py  api_errors.py  database.py  deps.py  email_sender.py  main.py  middleware.py  repositories.py  request_scope.py  sio_app.py  worker.py
backend/cua/: apified_cua.py
backend/execution/: browser_executor.py
backend/operators/: autoppia_operator.py  base_operator.py  browser_use_operator.py
backend/tests/: conftest.py  test_agent_assets.py  test_agent_builder.py  test_agent_config_contract.py  test_agent_configs.py  test_agent_creation.py  test_agent_harvesters.py  test_analytics.py  test_api_agents.py  test_api_keys.py  test_approvals.py  test_artifact_outputs.py  test_artifacts.py  test_assistant_security.py  test_autocinema_company_harvester.py  test_benchmark_coverage.py  test_capabilities.py  test_capability_discovery.py  test_capability_graph_coverage.py  test_capability_graph_nodes.py  test_claude_harvester.py  test_company_harvester.py  test_company_harvester_backend_smoke.py  test_company_harvester_engines.py  test_company_integration_contract.py  test_connector_benchmarks.py  test_connector_classes.py  test_connector_discovery.py  test_connector_factory.py  test_connectors.py  (+40 more)
(+376 files in other folders)
