[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "browser-use>=0.5.6",
    "pillow>=11.3.0",
    "python-socketio>=5.13.0",
    "autoppia_iwa @ git+https://github.com/autoppia/autoppia_iwa.git",
    "browserbase>=1.4.0",
    "motor>=3.7.1",
]
